# test-cuda

./: .gitignore  CMakeLists.txt  README.md  bench.py  report1.nsys-rep  report1.sqlite  report2.nsys-rep  report2.sqlite  util.cu  util.cuh
cpu/: add.cpp
gpu/: add_gpu_1.cu  add_gpu_3.cu
gpu/add/: add_gpu_2.cu  add_gpu_4.cu
gpu/conv/: conv_util.cu  conv_util.cuh  naive_conv.cu
gpu/matrix_transpose/: matrix_transpose_2.cu  matrix_transpose_shared_memory.cu
gpu/reduce/: naive_reduce.cu  naive_reduce_2.cu  reduce_eliminate_divergence.cu  reduce_shuffle.cu  reduce_util.cuh  reduce_vectorized.cu  reduce_vectorized_2.cu
gpu/sgemm/: sgemm.cu  sgemm_shared.cu  sgemm_shared_thread.cu  sgemm_util.cu  sgemm_util.cuh
leetgpu/: SWiGLU.cu  add.cu  add_v2.cu  color_inversion_v1.cu  convolution_1d.cu  convolution_1d_v2.cu  convolution_1d_v3.cu  convolution_2d_v1.cu  convolution_2d_v2.cu  count_2d_array_element.cu  count_array_element.cu  dot_product.cu  geglu.cu  interleave_arrays.cu  leaky_relu.cu  matrix_addition.cu  matrix_copy.cu  matrix_multiplication_v1.cu  matrix_multiplication_v2.cu  matrix_transpose_v1.cu  matrix_transpose_v2.cu  max_pooling_2d.cu  max_pooling_2d_v2.cu  mse.cu  mse_v2.cu  relu.cu  reverse_array_v1.cu  rgb_to_grayscale.cu  sigmoid.cu  silu.cu  softmax.cu  subarray_sum.cu  subarray_sum_2d_v1.cu  subarray_sum_2d_v2.cu  subarray_sum_3d_v1.cu  subarray_sum_v2.cu  subarray_sum_v3.cu  subarray_sum_v4.cu  value_clipping.cu  vector_addition.cu
